--- a/src/assets/css/vars.css
+++ b/src/assets/css/vars.css
@@ -2,7 +2,7 @@
   --color-primary: #DD1B57;
   --color-link: #349BF4;
   --color-text: #151515;
-  --color-border: ##E8E8E8;
+  --color-border: #E8E8E8;
   --color-gray: ##F2F2F2;
   --color-white: #ffffff;
 
